# simhash-rs

./: .travis.yml  Cargo.toml  README.md
benches/: simhash.rs
src/: lib.rs  simhash.rs
