[package]
authors = ["Bart Olsthoorn <bartolsthoorn@gmail.com>", "Jakub Pastuszek <jpastuszek@gmail.com>"]
license = "MIT"
name = "simhash"
version = "0.2.0"

[features]
default = ["hasher-sip"]
hasher-sip = ["siphasher"]
hasher-fnv = ["fnv"]
mutually_exclusive_features = ["hasher-sip", "hasher-fnv"]

[[bench]]
harness = false
name = "simhash"

[dependencies.siphasher]
optional = true
version = "0.2.2"

[dependencies.fnv]
optional = true
version = "1.0.5"

[dev-dependencies]
bencher = "0.1.2"
