[package]
authors = [
  "Bart Olsthoorn <bartolsthoorn@gmail.com>",
  "Jakub Pastuszek <jpastuszek@gmail.com>",
]
license = "MIT"
name = "simhash"
version = "0.3.0"
edition = "2018"

[features]
default = ["hasher-sip"]
hasher-sip = ["siphasher"]
hasher-fnv = ["fnv"]
mutually_exclusive_features = ["hasher-sip", "hasher-fnv"]

[[bench]]
harness = false
name = "simhash"

[dependencies.siphasher]
optional = true
version = "0.3.5"

[dependencies.fnv]
optional = true
version = "1.0.7"

[dev-dependencies]
bencher = "0.1.5"
